# uVSCEM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cache/: README.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/instructions/: architecture.instructions.md  quality.instructions.md
.github/workflows/: build.yml  lint.yml  publish.yml  security.yml  test.yml
docs/: cli.md
scripts/: check-build-needed.sh  wait-for-workflow.sh
src/tests/: conftest.py  test_api_client.py  test_cli_interface.py  test_code_manager.py  test_extension_manager.py  test_integration_slow.py  test_manifest_helpers.py  test_proxy_simulation_slow.py  test_vsce_sign_bootstrap.py  test_vscode_paths.py
src/tests/assets/: test_extensions.json
src/uvscem/: __main__.py  api_client.py  bundle_io.py  bundle_workflow.py  code_manager.py  exceptions.py  extension_manager.py  install_engine.py  internal_config.py  marketplace.py  models.py  vsce_sign_bootstrap.py  vscode_paths.py
