[tool.poetry]
name = "uvscem"
version = "0.1.3"
description = ""
authors = ["Arne Fahrenwalde <arne@fahrenwal.de>"]
readme = "README.md"
license = "MIT"
"repository" = "https://github.com/macgeneral/uVSCEM/"
packages = [{ include = "uvscem", from = "src/" }]

[tool.poetry.scripts]
uvscem = "uvscem.extension_manager:main"

[tool.poetry.dependencies]
python = ">=3.8"
json5 = "^0.9.17"
requests = "^2.31.0"
typer = "^0.9.0"
dependency-algorithm = "^0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
